fix: spacing errors of previous commit

--- a/docs/src/assets/scss/docs.scss
+++ b/docs/src/assets/scss/docs.scss
@@ -30,7 +30,7 @@ html {
     grid-row: 1 / 2;
     padding-top: var(--space-l-xl);
     padding-block-start: var(--space-l-xl);
-    font-size: .875rem;
+    font-size: 0.875rem;
     display: grid;
     grid-auto-rows: max-content;
     align-items: start;
@@ -142,10 +142,10 @@ pre[class*="language-"] {
 .c-btn.c-btn--playground {
     position: absolute;
     font-size: var(--step--1);
-    bottom: .5rem;
-    right: .5rem;
-    offset-block-end: .5rem;
-    offset-inline-end: .5rem;
+    bottom: 0.5rem;
+    right: 0.5rem;
+    offset-block-end: 0.5rem;
+    offset-inline-end: 0.5rem;
 
     @media all and (max-width: 768px) {
         display: none;
@@ -178,6 +178,6 @@ pre[class*="language-"] {
     }
 
     [data-theme="dark"] & {
-        background-color: rgba(238, 239, 240, .9);
+        background-color: rgba(238, 239, 240, 0.9);
     }
 }
